app/src/test/resources/programs/invalid/foreign/bad_arguments.exe
foreign foo add(x: Int, y: Int, z: Int) -> Int

foo main() -> Int{
    add(1, 2)
    add(1, 2, 3, 4)
    add(a=1, b=2, c=3)
}